samples/_failures_safe/1761085160_465f7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cd680d14.c: In function ‘main’:
./samples/SAFE/__tmp_cd680d14.c:131:16: error: expected ‘;’ at end of input
  131 |     read_matrix
      |                ^
      |                ;
./samples/SAFE/__tmp_cd680d14.c:131:5: error: expected declaration or statement at end of input
  131 |     read_matrix
      |     ^~~~~~~~~~~
